src/objects/crms11__Matrix_Price_Adjustment__c.object
<CustomObject>
    <description>FlexPricer Matrix Price Adjustment records adjust the prices for Products related to the associated Product Group for the Accounts related to the associated Account Group.</description>
    <fields>
        <fullName>crms11__Account_Group__c</fullName>
        <description>Account Group Object</description>
        <label>Account Group</label>
        <referenceTo>crms11__Account_Group__c</referenceTo>
        <relationshipLabel>Matrix Price Adjustments</relationshipLabel>
        <relationshipName>Matrix_Price_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>crms11__Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decrease</fullName>
                </value>
                <value>
                    <fullName>Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>crms11__Adjustment__c</fullName>
        <label>Adjustment %</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Discount_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Matrix_Adjustment__c</fullName>
        <formula>IF( ISPICKVAL( crms11__Adjustment_Type__c ,&apos;Increase&apos;) , crms11__Adjustment__c, -crms11__Adjustment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matrix Adjustment</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Max_Discount_on_New_Price__c</fullName>
        <label>Max Discount on New Price</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Product_Group__c</fullName>
        <description>Product Group Object</description>
        <label>Product Group</label>
        <referenceTo>crms11__Product_Group__c</referenceTo>
        <relationshipLabel>Matrix Price Adjustments</relationshipLabel>
        <relationshipName>Matrix_Price_Adjustments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>crms11__Sales_Price_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Price Lock</label>
        <type>Checkbox</type>
    </fields>
    <label>Matrix Price Adjustment</label>
    <listViews>
        <fullName>crms11__All</fullName>
        <columns>NAME</columns>
        <columns>crms11__Account_Group__c</columns>
        <columns>crms11__Product_Group__c</columns>
        <columns>crms11__Adjustment_Type__c</columns>
        <columns>crms11__Adjustment__c</columns>
        <columns>crms11__Matrix_Adjustment__c</columns>
        <columns>crms11__Max_Discount_on_New_Price__c</columns>
        <columns>crms11__Discount_Lock__c</columns>
        <columns>crms11__Sales_Price_Lock__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPA-{00000}</displayFormat>
        <label>Matrix Price Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrix Price Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>crms11__Adjustment_Field_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( crms11__Adjustment__c )</errorConditionFormula>
        <errorDisplayField>crms11__Adjustment__c</errorDisplayField>
        <errorMessage>&apos;Adjustment %&apos; field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>crms11__Adjustment_Type_Field_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT( crms11__Adjustment_Type__c ))</errorConditionFormula>
        <errorDisplayField>crms11__Adjustment_Type__c</errorDisplayField>
        <errorMessage>Adjustment Type field is required.</errorMessage>
    </validationRules>
</CustomObject>